--- a/source/pug/contact.pug
+++ b/source/pug/contact.pug
@@ -12,7 +12,7 @@ block header
 block content
 	article.contact
 		section.contact-section
-			.contact-section__container.container-fluid
+			.contact-section__container.container.container--size-large
 				.row
 					.contact-section__main.col-12.col-md
 						h2.contact-section__title(data-aos="fade-up") Contact
