--- a/source/pug/mixins/mixins.pug
+++ b/source/pug/mixins/mixins.pug
@@ -8,6 +8,7 @@ include _work-card-2.pug
 include _work-card-3.pug
 include _work-card-4.pug
 include _news-card.pug
+include _news-card2.pug
 include _navigation-dropdown.pug
 include _navigation-dropdown-home.pug
 include _menu-dropdown.pug
