--- a/source/pug/modules/contact-section.pug
+++ b/source/pug/modules/contact-section.pug
@@ -1,7 +1,7 @@
 section.contact-section
 	.contact-section__container.container.container--size-large
 		.row
-			.contact-section__main.col-12.col-md
+			.contact-section__main.col-12.col-lg
 				h2.contact-section__title(data-aos="fade-up") Contact
 				address.contact-section__address(data-aos="fade-up") 269 King Str, 05th Floor, Utral Hosue Building, Melbourne, VIC 3000, Australia.
 
@@ -14,7 +14,7 @@ section.contact-section
 					each item in FOOTER_MENU_2
 						li
 							a(href= item.url)= item.name
-			.contact-section__aside.col-12.col-md(data-aos="fade-up")
+			.contact-section__aside.col-12.col-lg(data-aos="fade-up")
 				.contact-section__form-wrapper
 					form(action="#", method="post")
 						label.contact-section__field.field.field--theme-white(data-aos="fade-up")
