--- a/source/pug/projects-carousel.pug
+++ b/source/pug/projects-carousel.pug
@@ -12,7 +12,7 @@ block header
 block content
 	article.projects-carousel
 		section.carousel-section.projects-carousel__carousel
-			.carousel-section__container.container-fluid
+			.carousel-section__container.container.container--size-large
 				header.carousel-section__header.row.align-items-end.align-items-md-center
 					h2.carousel-section__title.col-12.col-md-10(data-aos="fade-up") Projects
 					.carousel-section__nav.col-12.col-md-2.order-last.order-md-0.justify-content-md-end(data-aos="fade-up")
