--- a/source/pug/service-detail.pug
+++ b/source/pug/service-detail.pug
@@ -18,9 +18,9 @@ block content
 				header.carousel-section__header.row.align-items-end.align-items-md-center
 					h2.carousel-section__title.col-12.col-md-10(data-aos="fade-up") WORKS
 					.carousel-section__nav.col-12.col-md-2.order-last.order-md-0(data-aos="fade-up")
-						button.nav-btn.nav-btn--prev.__js_navbtn-latest-projects(type="button")
+						button.nav-btn.nav-btn--prev.__js_navbtn-latest-projects(data-target=".__js_carousel-latest-projects", type="button")
 							+icon('long-arrow-left')(width="50", height="16")
-						button.nav-btn.nav-btn--next.__js_navbtn-latest-projects(type="button")
+						button.nav-btn.nav-btn--next.__js_navbtn-latest-projects(data-target=".__js_carousel-latest-projects", type="button")
 							+icon('long-arrow-right')(width="50", height="16")
 
 
