--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -204,3 +204,56 @@
 		{text: 'Web development', addCl: 'services__item--left-shift', bootstrapCl: 'col-12 col-sm-6 col-lg-8', image: {url: '3', w: '616', h: '496'}},
 		{text: 'Marketing', addCl: 'services__item--last', bootstrapCl: 'col-12 col-sm-6 col-lg-10 offset-lg-1', image: {url: '4', w: '1238', h: '527'}}
 	];
+
+	let BLOG_MASONRY_CARDS = [
+		{image: {n: 'blog-1', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_design __js_business'},
+
+		{image: {n: 'blog-2', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_design'},
+
+		{image: {n: 'blog-3-2', w: '533', h: '1080', mobile: 'blog-3'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: 'news-card--vertical', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_marketing __js_design'},
+
+		{image: {n: 'blog-7-2', w: '533', h: '1080', mobile: 'blog-7'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: 'news-card--vertical', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_photography __js_marketing'},
+
+		{image: {n: 'blog-5', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_marketing'},
+
+		{image: {n: 'blog-9-2', w: '1125', h: '510', mobile: 'blog-9'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-8', masonryCl: '__js_photography'},
+	];
+
+	let BLOG_GRID_CARDS = [
+		{image: {n: 'blog-1', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_design __js_business'},
+
+		{image: {n: 'blog-2', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_design'},
+
+		{image: {n: 'blog-3', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_marketing __js_design'},
+
+		{image: {n: 'blog-4', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_photography __js_marketing'},
+
+		{image: {n: 'blog-5', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_marketing'},
+
+		{image: {n: 'blog-6', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_photography __js_business'},
+
+		{image: {n: 'blog-7', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_business'},
+
+		{image: {n: 'blog-8', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_photography __js_design'},
+
+		{image: {n: 'blog-9', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: '__js_photography'}
+	];
+
+	let BLOG_LISTING_CARDS = [
+		{image: {n: 'blog-5-2', w: '1221', h: '409', mobile: 'blog-5'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_photography'},
+
+		{image: {n: 'blog-9-3', w: '1221', h: '409', mobile: 'blog-9'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_business'},
+
+		{image: {n: 'blog-3-3', w: '1229', h: '409', mobile: 'blog-3'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_marketing'},
+
+		{image: {n: 'blog-8-2', w: '1221', h: '409', mobile: 'blog-8'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_photography __js_marketing'}
+	];
+
+
+	let BLOG_RELATED_CARDS = [
+		{image: {n: 'blog-1', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: ''},
+
+		{image: {n: 'blog-2', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: ''},
+
+		{image: {n: 'blog-5', w: '533', h: '510'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card', btstrCl: 'col-12 col-md-6 col-lg-4', masonryCl: ''}
+	];
