--- a/source/pug/blog-listing.pug
+++ b/source/pug/blog-listing.pug
@@ -25,11 +25,10 @@ block content
 					- let activeClass = item === 'all' ? ' filter__item--active' : '';
 					button(class="filter__item" + activeClass + ' __js_filter-btn', type="button", data-filter= filterVal)= item
 
-			ul.row.blog-grid__row.__js_blog-grid
-				+news-card({n: 'blog-5-2', w: '1221', h: '409'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(class='__js_design __js_business')
-				+news-card({n: 'blog-9-3', w: '1221', h: '409'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(class='__js_design')
-				+news-card({n: 'blog-3-3', w: '1229', h: '409'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(class='__js_marketing __js_design')
-				+news-card({n: 'blog-8-2', w: '1221', h: '409'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(class='__js_photography __js_marketing')
+			ul.blog-grid__row.row.g-0.__js_blog-grid
+				each item in BLOG_LISTING_CARDS
+					+news-card2(item.image, item.day, item.month, item.year, item.tag, item.title, item.text, item.href, item.modCl, item.elemCl, item.btstrCl, item.masonryCl)
+
 			+circle-link('', 'blog-grid__more')
 
 
