--- a/source/pug/single-post.pug
+++ b/source/pug/single-post.pug
@@ -90,10 +90,9 @@ block content
 				.single-post__subtitle(data-aos="fade-up") Related posts
 
 			.container.container--size-large
-				ul.row.blog-grid__row.single-post__related
-					+news-card({n: 'blog-1', w: '533', h: '510'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(data-aos="fade-up")
-					+news-card({n: 'blog-2', w: '533', h: '510'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(data-aos="fade-up")
-					+news-card({n: 'blog-5', w: '533', h: '510'}, '16', 'Jan', '2020', 'Design', 'A few words <br> about us', 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people,', '#')(data-aos="fade-up")
+				ul.blog-grid__row.row.g-0.single-post__related
+					each item in BLOG_RELATED_CARDS
+						+news-card2(item.image, item.day, item.month, item.year, item.tag, item.title, item.text, item.href, item.modCl, item.elemCl, item.btstrCl, item.masonryCl)
 
 			.container.container--xsmall
 				.single-post__subtitle(data-aos="fade-up") Comments
