--- a/source/pug/modules/tooltip--black.pug
+++ b/source/pug/modules/tooltip--black.pug
@@ -9,10 +9,10 @@ section.tooltip.tooltip--theme-dark
 			.tooltip__marquee.__js-marquee
 				.tooltip__list
 					each item in MARQUEE_WORDS
-						a.tooltip__item.animsition-link(href= item.url, data-image= item.image['1x'], data-image2x= item.image['2x'], data-image-w= item.image.w, data-image-h= item.image.h)= item.text
+						a.tooltip__item.animsition-link(href= item.url, data-image= item.image['1x'], data-image2x= item.image['2x'], data-image-w= item.image.w, data-image-h= item.image.h, data-webp="true")= item.text
 		.tooltip__section
 			.tooltip__marquee.__js-marquee--reverse
 				.tooltip__list
 					each item in MARQUEE_WORDS
-						a.tooltip__item.animsition-link(href= item.url, data-image= item.image['1x'], data-image2x= item.image['2x'], data-image-w= item.image.w, data-image-h= item.image.h)= item.text
+						a.tooltip__item.animsition-link(href= item.url, data-image= item.image['1x'], data-image2x= item.image['2x'], data-image-w= item.image.w, data-image-h= item.image.h, data-webp="true")= item.text
 
