--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -86,7 +86,6 @@
 			url: URLS.home.default,
 			currentSection: 1, currentPage: 1.01,
 			submenu: [
-				{name: 'Demo', url: URLS.intro.default, currentSection: 0, currentPage: 0},
 				{name: 'Agency default', url: URLS.home.default, currentSection: 1, currentPage: 1.01},
 				{name: 'Agency mono', url: URLS.home.mono, currentSection: 1, currentPage: 1.02},
 				{name: 'Agency modern', url: URLS.home.modern, currentSection: 1, currentPage: 1.03},
@@ -240,13 +239,13 @@
 	];
 
 	let BLOG_LISTING_CARDS = [
-		{image: {n: 'blog-5-2', w: '1221', h: '409', mobile: 'blog-5'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_photography'},
+		{image: {n: 'blog-5-2', w: '1221', h: '409', mobile: 'blog-5', mobileBreakpoint: '768'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_photography'},
 
-		{image: {n: 'blog-9-3', w: '1221', h: '409', mobile: 'blog-9'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_business'},
+		{image: {n: 'blog-9-3', w: '1221', h: '409', mobile: 'blog-9', mobileBreakpoint: '768'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_business'},
 
-		{image: {n: 'blog-3-3', w: '1229', h: '409', mobile: 'blog-3'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_marketing'},
+		{image: {n: 'blog-3-3', w: '1229', h: '409', mobile: 'blog-3', mobileBreakpoint: '768'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_design __js_marketing'},
 
-		{image: {n: 'blog-8-2', w: '1221', h: '409', mobile: 'blog-8'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_photography __js_marketing'}
+		{image: {n: 'blog-8-2', w: '1221', h: '409', mobile: 'blog-8', mobileBreakpoint: '768'}, day: '16', month: 'Jan', year: '2020', tag: 'Design', title: 'A few words <br> about us', text: 'We make our customers &#39; products valuable in the eyes of customers. To do this, we analyze and study people', href: URLS.blog.post, modCl: '', elemCl: 'blog-grid__card blog-grid__card--listing', btstrCl: 'col-12 col-md-6 col-lg-12', masonryCl: '__js_photography __js_marketing'}
 	];
 
 
