--- a/source/scss/blocks/blog-grid.scss
+++ b/source/scss/blocks/blog-grid.scss
@@ -39,6 +39,7 @@
 			z-index: -1;
 			width: 100%;
 			height: 100%;
+			display: flex;
 
 			img {
 				width: 100%;
@@ -154,8 +155,8 @@
 		}
 
 		.news-card__pic {
-			height: 0;
-			padding-top: 33.5%;
+			//height: 0;
+			//padding-top: 33.5%;
 
 			img {
 				position: absolute;
