--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -4,34 +4,96 @@
   Author: Paul
   Author URI: http://themeforest.net/user/Paul_tf
 
-  1. Global
-		1.1 General
-		1.2  Typography
-		1.3 Utils
-		1.4 Buttons
-		1.5 Fields
-		1.6 Heading
-		1.7 Menu toggle button
-		1.8 Navigation
-		1.9 Logo
-		1.10 Social
-		1.11 More
-		1.12 Play button
-		1.13 Filter
-		1.14 Overlay
-		1.15 Preloader
-		1.16 Webpage
-		1.17 Language switcher
+1. GLOBAL
 
-	2. Header
-		2.1 Mobile menu
-		2.2 Header
+	1.1 General
+	1.2  Typography
+	1.3 Utils
+	1.4 Buttons
+	1.5 Fields
+	1.6 Heading
+	1.7 Menu toggle button
 
-	3. Footer
-		3.1 Footer
+2. COMPONENTS
+
+	2.10 Navigation
+	2.11 Logo
+	2.12 Social
+	2.13 Quete block
+	2.14 Comment
+	2.15 Form
+	2.16 Filters block
+	2.17 Feature card
+	2.18 Service preview card
+	2.19 Carousel card
+	2.20 Project preview card in carousel
+	2.21 Project card in listing
+	2.22 Team member card
+	2.23 News card
+	2.24 Price card
+	2.25 Skill block
+	2.26 Block meta for project page
+	2.27 Project other block
+	2.28 Carousel
+	2.29 Accordion
+	2.30 Video block
+	2.31 Statistics block
+	2.32 Section with partners logo
+	2.33 Mobile canvas
+
+3. PAGES SECTIONS
+
+	3.10 Hero section in homepage
+	3.11 Main screen section in homepage
+	3.12 Hero section in modern homepage
+	3.13 Hero section in creative homepage
+	3.14 Features section in homepage
+	3.15 Services section in homepage
+	3.16 Works section in homepage
+	3.17 Contact section in homepage
+	3.18 About section with video in homepage
+	3.19 About section in modern homepage
+	3.20 Section with carousel
+	3.21 Team section only with mobile carousel
+	3.22 Section discuss-project
+	3.23 Tooltip section
+	3.24 Feedback section for starting the project
+	3.25 Projects listing
+	3.26 Portfolio section
+	3.27 Services section
+	3.28 Plans section in creative homepage
+	3.29 First banner block
+	3.30 Grid in team page
+	3.31 Grid in services page
+	3.32 Article
+
+4. PAGES
+
+	4.10 Blog grid layout
+	4.11 Vcard page
+	4.12 Single post page
+	4.13 Comming soon page
+	4.14 404 page
+	4.15 Parallax project page
+	4.16 Cantact page
+	4.17 FAQ page
+	4.18 Service detail page
+	4.19 Pricing page
+	4.20 About us page
+	4.21 Projects carousel page
+	4.22 Single project page
+
+5. COMMON COMPONENTS
+
+	5.1 Header
+	5.2 Footer
+	5.3 Wrapper for header and main content
+	5.4 Overlay
+	5.5 Preloader
+	5.6 Webpage
 
 
--------------------------------------------------------------------------------*/
+**********************************************/
 
 @import "utils/variables";
 @import "utils/functions";
@@ -43,9 +105,7 @@
 //ignorescss @import url("jquery.pagepiling.css");
 //ignorescss @import url("jquery.fancybox.css");
 
-/*-------------------------------------------------------------------------------
-  1. Global
--------------------------------------------------------------------------------*/
+/*** 1. GLOBAL ***/
 
 /* 1.1 General */
 @import "common/global";
@@ -77,168 +137,211 @@
 /* 1.7 Menu toggle button */
 @import "blocks/menu-toggle";
 
-/* 1.8 Navigation */
+/*** 2. COMPONENTS ***/
+/* 2.10 Navigation */
 @import "blocks/navigation";
 
-/* 1.9 Logo */
+/* 2.11 Logo */
 @import "blocks/logo";
 @import "blocks/vertical-logo";
 
-/* 1.10 Social */
+/* 2.12 Social */
 @import "blocks/social";
 
-/* Parallax background block */
-@import "blocks/parallax-bg";
+/* 2.13 Quete block*/
+@import "blocks/quote";
 
-/* Feature card */
+/* 2.14 Comment */
+@import "blocks/comment";
+
+/* 2.15 Form */
+@import "blocks/form";
+
+/* 2.16 Filters block */
+@import "blocks/filter";
+
+/* 2.17 Feature card */
 @import "blocks/feature-card";
 
-/* Service preview card */
+/* 2.18 Service preview card */
 @import "blocks/service-preview";
 
-/* Carousel card */
+/* 2.19 Carousel card */
 @import "blocks/carousel-card";
 
-/* Project preview card in carousel */
+/* 2.20 Project preview card in carousel */
 @import "blocks/project-preview";
 
-/* Project card in listing */
+/* 2.21 Project card in listing */
 @import "blocks/project-card";
 
-/* Team member card */
+/* 2.22 Team member card */
 @import "blocks/member-card";
 
-/* Skill */
-@import "blocks/skill";
+/* 2.23 News card */
+@import "blocks/news-card";
 
-/* Skills block */
+/* 2.24 Price card */
+@import "blocks/card-price";
+
+/* 2.25 Skill block */
+@import "blocks/skill";
 @import "blocks/skills";
 
-/* Carousel */
+/* 2.26 Block meta for project page*/
+@import "blocks/meta";
+
+/* 2.27 Project other block */
+@import "blocks/project-other";
+
+/* 2.28 Carousel */
 @import "blocks/carousel";
 
-/* Accordion */
+/* 2.29 Accordion */
 @import "blocks/accordion";
 
-/* Video block */
+/* 2.30 Video block */
 @import "blocks/video-block";
 
-/* Statistics block */
+/* 2.31 Statistics block */
 @import "blocks/statistics";
 
-/* Section with partners logo */
+/* 2.32 Section with partners logo */
 @import "blocks/partners";
 
-/* Mobile canvas */
+/* 2.33 Mobile canvas */
 @import "blocks/mobile-canvas";
 
-/* 2.2 Hero section in homepage */
+/*** 3. PAGES SECTIONS ***/
+
+/* 3.10 Hero section in homepage */
 @import "blocks/hero";
 
-/* 2.2 Main screen section in homepage */
+/* 3.11 Main screen section in homepage */
 @import "blocks/main-screen";
 
-/* 2.2 Hero section in modern homepage */
+/* 3.12 Hero section in modern homepage */
 @import "blocks/modern-hero";
 
-/* 2.2 Hero section in creative homepage */
+/* 3.13 Hero section in creative homepage */
 @import "blocks/creative-hero";
 
-/* 2.2 Features section in homepage */
+/* 3.14 Features section in homepage */
 @import "blocks/features";
 
-/* 2.2 Services section in homepage */
+/* 3.15 Services section in homepage */
 @import "blocks/our-services";
 
-/* 2.2 Works section in homepage */
+/* 3.16 Works section in homepage */
 @import "blocks/works";
 
-/* 2.2 Contact section in homepage */
+/* 3.17 Contact section in homepage */
 @import "blocks/contact-section";
 
-/* 2.2 About section with video in homepage */
+/* 3.18 About section with video in homepage */
 @import "blocks/about-video-section";
 
-/* 2.2 About section in modern homepage */
+/* 3.19 About section in modern homepage */
 @import "blocks/about-section";
 
-/* 2.2 Section with carousel */
+/* 3.20 Section with carousel */
 @import "blocks/carousel-section";
 
-/* 2.2 Team section only with mobile carousel */
+/* 3.21 Team section only with mobile carousel */
 @import "blocks/team-section";
 
-/* 2.2 Section discuss-project */
+/* 3.22 Section discuss-project */
 @import "blocks/discuss-project";
 
-/* 2.2 Tooltip section */
+/* 3.23 Tooltip section */
 @import "blocks/tooltip";
 
-/* Feedback section for starting the project */
+/* 3.24 Feedback section for starting the project */
 @import "blocks/start-project";
 
-/* Vcard page  */
+/* 3.25 Projects listing */
+@import "blocks/projects-listing";
+
+/* 3.26 Portfolio section */
+@import "blocks/portfolio-section";
+
+/* 3.27 Services section */
+@import "blocks/services-section";
+
+/* 3.28 Plans section in creative homepage */
+@import "blocks/plans-section";
+
+/* 3.29 First banner block */
+@import "blocks/first-banner";
+
+/* 3.30 Grid in team page */
+@import "blocks/team";
+
+/* 3.31 Grid in services page */
+@import "blocks/services";
+
+/* 3.32 Article */
+@import "blocks/article";
+
+/*** 4. PAGES ***/
+
+/* 4.10 Blog grid layout */
+@import "blocks/blog-grid";
+
+/* 4.11 Vcard page  */
 @import "blocks/vcard";
 @import "blocks/vcard-image";
 
-/* Projects listing */
-@import "blocks/projects-listing";
-
-/* Portfolio section */
-@import "blocks/portfolio-section";
-
-/* Services section */
-@import "blocks/services-section";
-
-/* Plans section in creative homepage */
-@import "blocks/plans-section";
-
-/* Grid in team page */
-@import "blocks/team";
-
-/* Grid in services page */
-@import "blocks/services";
-
-/* 2.2 Header */
-@import "blocks/header";
-
-/* 3.1 Footer */
-@import "blocks/footer";
-
-/* 3.1 wrapper for header and main content */
-@import "blocks/leftward-wrapper";
-
-/* 1.14 Overlay */
-@import "blocks/overlay";
-
-/* 1.15 Preloader */
-@import "blocks/preloader";
-
-/* 4.31 Article */
-@import "blocks/article";
-
-/* 1.16 Webpage */
-@import "blocks/webpage";
-
-@import "blocks/quote";
-@import "blocks/comment";
-@import "blocks/news-card";
-@import "blocks/blog-grid";
-@import "blocks/filter";
+/* 4.12 Single post page */
 @import "blocks/single-post";
-@import "blocks/form";
+
+/* 4.13 Comming soon page */
 @import "blocks/timer";
 @import "blocks/coming-soon";
+
+/* 4.14 404 page */
 @import "blocks/404-error";
+
+/* 4.15 Parallax project page*/
 @import "blocks/parallax-projects";
+
+/* 4.16 Cantact page*/
 @import "blocks/contact";
-@import "blocks/first-banner";
+
+/* 4.17 FAQ page*/
 @import "blocks/faq";
+
+/* 4.18 Service detail page */
 @import "blocks/service-detail";
-@import "blocks/card-price";
+
+/* 4.19 Pricing page */
 @import "blocks/pricing";
+
+/* 4.20 About us page */
 @import "blocks/about-us";
+
+/* 4.21 Projects carousel page */
 @import "blocks/projects-carousel";
-@import "blocks/meta";
-@import "blocks/project-other";
+
+/* 4.22 Single project page*/
 @import "blocks/single-project";
+
+/*** 5. COMMON COMPONENTS ***/
+
+/* 5.1 Header */
+@import "blocks/header";
+
+/* 5.2 Footer */
+@import "blocks/footer";
+
+/* 5.3 Wrapper for header and main content */
+@import "blocks/leftward-wrapper";
+
+/* 5.4 Overlay */
+@import "blocks/overlay";
+
+/* 5.5 Preloader */
+@import "blocks/preloader";
+
+/* 5.6 Webpage */
+@import "blocks/webpage";
